Fix too tall mobile cards (#742)
* Fix tall mobile cards

* Alexis did it!

--- a/src/ui/sass/modules/_Card.scss
+++ b/src/ui/sass/modules/_Card.scss
@@ -20,7 +20,7 @@
 
   &-child {
     flex-grow: 1;
-    height: 100%;
+    min-height: 1px;
   }
 
   &--universal {
